# Technology-Template-Repository

./: ...  .gitignore  .ruff.toml  README.md  bug_report_template.md  component.md  coverage.xml  coverage_base.xml  coverage_head.xml  feature_request_template.md  mkdocs.yml  mypy.ini  pull_request_template.md  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  testing.md
.circleCI/: config.yml
.circleci/: .config.yml.swp  config.yml
.github/: bug_report_template.md  component.md
src/: __init__.py  api.py
src/api/: calculator_api.py  logger_api.py  notifier_api.py
src/calculator/: README.md  __init__.py  calculator.py  calculator_interface.py  pyproject.toml
src/calculator/src/calculator/: __init__.py
src/calculator/tests/: test_calculator.py
src/calculator_impl/: pyproject.toml
src/calculator_impl/src/calculator_impl/: __init__.py  _impl.py
src/calculator_impl/src/tests/: test_calculator.py
src/logger/: README.md  __init__.py  logger.py  logger_interface.py  pyproject.toml
src/logger/src/logger/: __init__.py
src/logger_impl/: pyproject.toml
src/logger_impl/src/logger_impl/: __init__.py  _impl.py
src/logger_impl/src/tests/: test_logger.py
src/notifier/: README.md  __init__.py  notifier.py  notifier_interface.py  pyproject.toml
src/notifier/src/notifier/: __init__.py
src/notifier/tests/: test_notifier.py
src/notifier_impl/: pyproject.toml
src/notifier_impl/src/notifier_impl/: __init__.py  _impl.py
src/notifier_impl/src/tests/: test_notifier.py
test-results/: coverage.json  junit.xml
tests/: __init__.py
tests/api/: test_calculator_api.py  test_logger_api.py  test_notifier_api.py
tests/e2e/: __init__.py  test_full_workflow.py
tests/integration/: __init__.py  test_api_integration.py  test_calculator_logger.py  test_calculator_notifier.py  test_logger_notifier.py
tests/unit/: test_calculator.py  test_logger.py  test_notifier.py
