[project]
name = "technology-template-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "nose2>=0.15.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "uv>=0.6.0",
]

[tool.ruff]
line-length = 88  # Default formatting width
target-version = "py312"  # Adjust based on actual Python version

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "INP001",  # Ignore missing __init__.py for namespace packages
    "D100",  # Ignore missing module-level docstrings
    "D203", "D211",  # Conflicting rules about blank lines before class
    "D212", "D213",  # Conflicting rules about multi-line docstrings
    "S101",  # Ignore assert usage in tests
    "T201",  # Ignore print statements in Logger component
    "COM812",  # Suggested by ruff to disable it to avoid unexpected behavior
    "PIE790", # Ignore unnecessary pass statement in interfaces
    "ANN401", # Ignore dynamically typed expression are disallowed in interfaces
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN001", "ANN201"]

[tool.uv.workspace]
members = ["src/notifier_impl"]

[tool.pytest.ini_options]
pythonpath = [
    "src/notifier_impl/src",
    "src/calculator/src",
    "src/logger/src"
]