[project]
name = "technology-template-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "nose2>=0.15.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "uv>=0.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0", # Moved coverage here
]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "uv>=0.6.0", # uv itself is often installed globally, but can be here
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88  # Default formatting width
target-version = "py312"  # Adjust based on actual Python version

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "INP001",  # Ignore missing __init__.py for namespace packages
    "D100",  # Ignore missing module-level docstrings
    "D203", "D211",  # Conflicting rules about blank lines before class
    "D212", "D213",  # Conflicting rules about multi-line docstrings
    "S101",  # Ignore assert usage in tests
    "T201",  # Ignore print statements in Logger component
    "COM812",  # Suggested by ruff to disable it to avoid unexpected behavior
    "PIE790", # Ignore unnecessary pass statement in interfaces
    "ANN401", # Ignore dynamically typed expression are disallowed in interfaces
    "F401", # Module imported but unused
    "F823", # Local variable name shadows a built-in name
    "PLR2004", # Too many branches
    "ERA001", # File is not encoded with UTF-8
    "F841", # Local variable assigned but not used
    "F821", # Undefined name
    "PGH003", # Use specific rule codes when ignoring type issues
    "I001", # Import block is un-sorted or un-formatted
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN001", "ANN201"]

# Extremely important: 
[tool.uv.workspace]
members = [
    "src/calculator",
    "src/calculator_impl", 
    "src/logger",
    "src/logger_impl",     
    "src/notifier",
    "src/notifier_impl",   
]

[tool.pytest.ini_options]
pythonpath = [
    "src/notifier_impl",
    "src/logger_impl",
    "src/calculator_impl",
    "src/calculator", 
    "src/notifier", 
    "src/logger", 
    "src",
    "."]
testpaths = ["tests", "src"] # Include src/*/*/tests directories
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.mypy]
strict = true
explicit_package_bases = true
# Combine mypy_path into a single string or list
mypy_path = [
    "src/logger/src",
    "src/notifier/src",
    "src/logger_impl/src",
    "src/notifier_impl/src",
    "src/calculator/src",
    "src/calculator_impl/src",
]