[project]
name = "logger_impl"
version = "0.1.0"
description = "Implementation of the Logger Protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logger",
    "notifier",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logger = { workspace = true }
notifier = { workspace = true }
